--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "repository": "git@github.com:drivly/snake.case.do.git",
   "license": "MIT",
   "module": "worker.js",
-  "dependencies": {
-    "snakecase-keys": "^5.4.2"
-  },
   "scripts": {
     "dev": "wrangler dev worker.js",
     "deploy": "wrangler publish worker.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write '**/*.{js,css,json,md}'"
   },
+  "dependencies": {
+    "snakecase-keys": "^5.4.2"
+  },
   "devDependencies": {
-    "prettier": "^1.17.0",
+    "jest": "^28.1.3",
+    "prettier": "^2.7.1",
     "wrangler": "^2.0.27"
   }
 }
